2013-03-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_ui.php
	  operation/agentes/status_monitor: Added popup with data
	module, remove column 'tags' and changed font size to
	column 'timestamp'.

2013-03-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_treeview.php
	  include/functions_ui.php
	  include/ajax/module.php
	  include/javascript/pandora_modules.js
	  operation/tree.php: Added popup with data
	module.

2013-03-15 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Improved performance of
	get_tree_agents() API by omitting unnecessary data copies and
	queries when output fields are explicitly specified.


2013-03-14  Mario Pulido  <mario.pulido@artica.es>

	* operation/users/user_edit.php, godmode/users/configure_user.php: Add tip in edit users
	* include/help/en/help_profile.php, include/help/es/help_profile.php: Modified help file 
	in profiles management

2013-03-14  Junichi Satoh  <junichi@rworks.jp>
	
       * include/help/ja/help_history_database.php: Added a new help file.

2013-03-13  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Let an Enterprise SNMP server
	  claim back modules that were moved to the Network server.

2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: fixed the notices PHP.
	
	Fixes: #3607807

2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: fixed the massive deletion of
	modules when only delete one module, the old code deleted all
	modules in the agents on operation.
	
	* godmode/massive/massive_delete_modules.php: cleaned source code
	style.

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/functions.ajax.php: Added proxy
	 and bsdtar support.

	Merged from: branch_4.0

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Keep original