@@ -1,3 +1,9 @@
+2013-03-15  Mario Pulido <mario.pulido@artica.es>
+
+	* include/help/en/help_performance.php, include/help/es/help_performance.php
+ 	godmode/setup/setup.php: Add help in performance configuration.
+
+
 2013-03-15  Vanessa Gil <vanessa.gil@artica.es>
 
 	* include/functions_ui.php
